// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`representative snapshots monorepo-root SKILL.md snapshot: monorepo-root-SKILL.md 1`] = `
"---
name: mono-fixture-best-practices
description: Best practices and architecture guide for mono-fixture (auto-generated by mp-sentinel)
---

# mono-fixture Best Practices

> Auto-generated by mp-sentinel - re-run \`npx mp-sentinel create-skills --all-agents --force\` to update.

## Required Agent Workflow

Before writing any code for **mono-fixture**, follow these steps in order:

1. **Read SKILL.md** - project profile, conventions, pitfalls.
2. **Read local agent instructions**: \`AGENTS.md\`, \`CLAUDE.md\`, \`.claude/skills/\`, \`.agents/skills/\`, \`.cursor/rules/\`, \`.windsurf/skills/\`, \`.roo/skills/\`, \`.cline/skills/\`.
3. **Check parser health first**:
   - \`pnpm exec mp-sentinel indexing --health --index-format json\` - health overview, parser breakdown
4. **Drilldown when health suggests issues**:
   - \`pnpm exec mp-sentinel indexing --recovered --index-format json\` - list files parsed via fallback recoveries
   - \`pnpm exec mp-sentinel indexing --parse-errors --index-format json\` - list files with hard parse errors
5. **Before editing**, use source index diagnostics:
   - \`pnpm exec mp-sentinel indexing --agent-context <file> --index-format json\` - symbols, imports, dependents, next commands
   - \`pnpm exec mp-sentinel indexing --explain-index <file> --index-format json\` - imports, dependents, symbols
   - \`pnpm exec mp-sentinel indexing --find-symbol <name> --index-format json\` - search index for symbols
   - \`pnpm exec mp-sentinel indexing --find-import <package-or-path> --index-format json\` - search index for import usage
   - \`pnpm exec mp-sentinel indexing --find-code <query> --index-format json\` - search indexed code snippets
   - \`pnpm exec mp-sentinel indexing --stats --index-format json\` - index statistics
   - \`pnpm exec mp-sentinel --explain-context --format json --files <file>\` - context enrichment preview
6. **Load only the relevant references**:
   - \`references/codebase-map.md\` - 3 mods, 0 entrypoints
   - \`references/testing-map.md\` - 0 test associations
   - \`references/dependencies.md\` - 0 dependencies
   - \`references/public-api.md\` - 0 risk items
   - \`references/code-style.md\` - detected indent, quotes, semicolons, formatter configs
   - \`references/language-patterns.md\` - per-language rules and language distribution
   - \`references/clean-code-checklist.md\` - code quality checklist with limits
7. **Respect the profile rules** - each profile has specific review pitfalls listed below.

**Quick-start search examples (from this codebase):**
   - \`pnpm exec mp-sentinel indexing --find-symbol sym_packages_core_src_index_ts --index-format json\` - locate \`sym_packages_core_src_index_ts\` (function) across the codebase

> **Auto-generated.** Regenerate via \`pnpm exec mp-sentinel create-skills --all-agents --force\`. Do not edit.

## Reference Routing

When touching files, load only the relevant references:

| Directory Pattern | Recommended References |
|---|---|
| \`apps/\`, \`packages/\` | architecture, codebase-map |
| Other files | architecture, codebase-map |

## Overview

**Project:** mono-fixture v1.0.0
**Profile:** library
**Frameworks:** typescript, vitest
**Package Manager:** pnpm
**Indexed Files:** 5
**Languages:** tsx (3), typescript (2)
**Key Scripts:** \`pnpm run test\`, \`pnpm run build\`

## Detected Conventions

Conventions observed in this codebase (from config and the import graph). Follow them unless project-authored rules say otherwise:

- Monorepo workspace root (\`packages/*\`, \`apps/*\`) - run package-local scripts with \`pnpm --filter <package> run <script>\` instead of cd'ing into packages.
- Vitest tests live colocated next to the source files they cover (1 test file(s)) - follow the same placement for new tests.

## Common Change Paths

| Task | Where | Notes |
|---|---|---|
| UI work | \`packages/ui/\` | - |
| Tests | \`(colocated *.test.* next to source)\` | run \`pnpm run test\` |


## Language & Framework Rules

Active packs: \`TypeScript (Strict)\`

Summary: 1 must, 2 should, 2 avoid rules across 1 pack(s).


### TypeScript (Strict) Rules

- **AVOID**: Do NOT use \`any\` type. If unavoidable (e.g., untyped third-party types), isolate with a \`// eslint-disable-next-line\` and a comment explaining why.
- **MUST**: Respect all strict \`tsconfig.json\` flags enabled in this project (see Code Conventions for the exact list).
- **SHOULD**: Prefer \`interface\` over \`type\` for object shapes that may be extended. Use \`type\` for unions, intersections, and mapped types.
- **SHOULD**: Use \`const\` assertions (\`as const\`) for literal types and tuple inference.
- **AVOID**: Do NOT use \`namespace\` or \`module\` declarations -- use ES module imports/exports instead.



## Clean Code Policy

These rules are enforced by the agent when writing or reviewing code:

- **Maximum file length:** 500 lines (hard limit). Refactor before adding more.
- **Warning at:** 350 lines - consider splitting into smaller modules.
- **Maximum function body:** 80 lines. Extract helpers for readability.
- **Maximum parameters:** 5 per function. Use an options object for more.
- **Cyclomatic complexity hint:** 12. High-complexity functions should be refactored.



## File Size Policy

Hard limit: **500 lines** per file.



## References

- [Architecture & Hub Files](./references/architecture.md)
- [Module Map](./references/modules.md)
- [Profile Rules & Commands](./references/commands.md)
- [Codebase Map](./references/codebase-map.md)
- [Testing Map](./references/testing-map.md)
- [Dependencies](./references/dependencies.md)
- [Public API](./references/public-api.md)
- [Code Style](./references/code-style.md)
- [Language Patterns](./references/language-patterns.md)
- [Clean Code Checklist](./references/clean-code-checklist.md)"
`;

exports[`representative snapshots node-service SKILL.md snapshot: node-service-SKILL.md 1`] = `
"---
name: svc-fixture-best-practices
description: Best practices and architecture guide for svc-fixture (auto-generated by mp-sentinel)
---

# svc-fixture Best Practices

> Auto-generated by mp-sentinel - re-run \`npx mp-sentinel create-skills --all-agents --force\` to update.

## Required Agent Workflow

Before writing any code for **svc-fixture**, follow these steps in order:

1. **Read SKILL.md** - project profile, conventions, pitfalls.
2. **Read local agent instructions**: \`AGENTS.md\`, \`CLAUDE.md\`, \`.claude/skills/\`, \`.agents/skills/\`, \`.cursor/rules/\`, \`.windsurf/skills/\`, \`.roo/skills/\`, \`.cline/skills/\`.
3. **Check parser health first**:
   - \`npx mp-sentinel indexing --health --index-format json\` - health overview, parser breakdown
4. **Drilldown when health suggests issues**:
   - \`npx mp-sentinel indexing --recovered --index-format json\` - list files parsed via fallback recoveries
   - \`npx mp-sentinel indexing --parse-errors --index-format json\` - list files with hard parse errors
5. **Before editing**, use source index diagnostics:
   - \`npx mp-sentinel indexing --agent-context <file> --index-format json\` - symbols, imports, dependents, next commands
   - \`npx mp-sentinel indexing --explain-index <file> --index-format json\` - imports, dependents, symbols
   - \`npx mp-sentinel indexing --find-symbol <name> --index-format json\` - search index for symbols
   - \`npx mp-sentinel indexing --find-import <package-or-path> --index-format json\` - search index for import usage
   - \`npx mp-sentinel indexing --find-code <query> --index-format json\` - search indexed code snippets
   - \`npx mp-sentinel indexing --stats --index-format json\` - index statistics
   - \`npx mp-sentinel --explain-context --format json --files <file>\` - context enrichment preview
6. **Load only the relevant references**:
   - \`references/codebase-map.md\` - 5 mods, 0 entrypoints
   - \`references/testing-map.md\` - 0 test associations
   - \`references/dependencies.md\` - 0 dependencies
   - \`references/public-api.md\` - 1 risk items
   - \`references/code-style.md\` - detected indent, quotes, semicolons, formatter configs
   - \`references/language-patterns.md\` - per-language rules and language distribution
   - \`references/clean-code-checklist.md\` - code quality checklist with limits
7. **Respect the profile rules** - each profile has specific review pitfalls listed below.

**Quick-start search examples (from this codebase):**
   - \`npx mp-sentinel indexing --agent-context src/db/prisma-client.ts --index-format json\` - top hub file (imported by 3 files)
   - \`npx mp-sentinel indexing --find-symbol sym_src_db_order_repository_ts --index-format json\` - locate \`sym_src_db_order_repository_ts\` (function) across the codebase

> **Auto-generated.** Regenerate via \`npx mp-sentinel create-skills --all-agents --force\`. Do not edit.

## Reference Routing

When touching files, load only the relevant references:

| Directory Pattern | Recommended References |
|---|---|
| \`src/db/\`, \`src/routes/\`, \`src/services/\`, \`tests/\` | architecture, codebase-map |
| Other files | architecture, codebase-map |

## Overview

**Project:** svc-fixture v1.0.0
**Profile:** node-service
**Frameworks:** express, typescript, jest
**Node Engine:** >=20
**Package Manager:** npm
**Indexed Files:** 9
**Languages:** typescript (9)
**Key Scripts:** \`npm test\`, \`npm run build\`, \`npm run start\`

## First Files To Read

Read these before changing anything - they anchor how the codebase fits together:

- \`src/db/prisma-client.ts\` - hub file, imported by 3 files

## Detected Conventions

Conventions observed in this codebase (from config and the import graph). Follow them unless project-authored rules say otherwise:

- Prisma data access is concentrated in \`src/db/\` - go through that layer instead of querying from UI/route code directly.
- Jest tests live in dedicated test directories (\`__tests__/\` / \`tests/\`) (2 test file(s)) - follow the same placement for new tests.

## Common Change Paths

| Task | Where | Notes |
|---|---|---|
| API / data work | \`src/routes/\`, \`src/services/\` | go through the detected data/HTTP layer |
| Tests | \`tests/\` | run \`npm test\` |


## Language & Framework Rules

Active packs: \`TypeScript (Strict)\`

Summary: 3 must, 2 should, 2 avoid rules across 1 pack(s).


### TypeScript (Strict) Rules

- **MUST**: Internal imports must include the \`.js\` extension (NodeNext / ESM resolution).
- **MUST**: Use the \`node:\` prefix for all Node.js built-in module imports (\`node:fs\`, \`node:path\`, \`node:process\`, etc.).
- **AVOID**: Do NOT use \`any\` type. If unavoidable (e.g., untyped third-party types), isolate with a \`// eslint-disable-next-line\` and a comment explaining why.
- **MUST**: Respect all strict \`tsconfig.json\` flags enabled in this project (see Code Conventions for the exact list).
- **SHOULD**: Prefer \`interface\` over \`type\` for object shapes that may be extended. Use \`type\` for unions, intersections, and mapped types.
- **SHOULD**: Use \`const\` assertions (\`as const\`) for literal types and tuple inference.
- **AVOID**: Do NOT use \`namespace\` or \`module\` declarations -- use ES module imports/exports instead.



## Clean Code Policy

These rules are enforced by the agent when writing or reviewing code:

- **Maximum file length:** 500 lines (hard limit). Refactor before adding more.
- **Warning at:** 350 lines - consider splitting into smaller modules.
- **Maximum function body:** 80 lines. Extract helpers for readability.
- **Maximum parameters:** 5 per function. Use an options object for more.
- **Cyclomatic complexity hint:** 12. High-complexity functions should be refactored.



## File Size Policy

Hard limit: **500 lines** per file.



## References

- [Architecture & Hub Files](./references/architecture.md)
- [Module Map](./references/modules.md)
- [Profile Rules & Commands](./references/commands.md)
- [Codebase Map](./references/codebase-map.md)
- [Testing Map](./references/testing-map.md)
- [Dependencies](./references/dependencies.md)
- [Public API](./references/public-api.md)
- [Code Style](./references/code-style.md)
- [Language Patterns](./references/language-patterns.md)
- [Clean Code Checklist](./references/clean-code-checklist.md)"
`;
